--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@
     margin: 0;
     padding: 0;
     background: #013d48;
+    
 
 }
+
 
 #festifab {
     display: flex;
@@ -376,4 +378,55 @@ button:focus {
     color: #FFD301;
 
     text-shadow: 0px 4px 4px rgba(255, 211, 1, 0.65);
+} 
+#intro{
+    height: 0;
+    margin-top: 600px;
+    margin-bottom: 50px;
+
 }
+#intro{
+    margin-left: 700px;
+    margin-right: 150px;
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    padding: 10px;
+    color: white;
+    font-size: 18px;
+    font-style: oblique;
+}
+#intro h2{
+    color  :#FFD301;
+    text-shadow: 7px -7px 20px ;
+}
+#details{
+    margin-left: 100px;
+    margin-right: 50px;
+    margin-top: 250px;
+    margin-bottom: 150px;
+    color: white;
+    font-size: 18px;
+    font-style: oblique;
+
+}
+#cse{
+    margin-top: 150px;
+    margin-bottom: 150px;
+    margin-left: 700px;
+    margin-right: 150px;
+    color: white;
+    font-size: 18px;
+    font-style: oblique;
+}
+#cse2{
+    margin-top: 70px;
+    margin-bottom: 70px;
+    margin-left: 100px;
+    margin-right: 800px;
+    color: white;
+    font-size: 18px;
+    font-style: oblique;
+
+}
+
