--- a/style.css
+++ b/style.css
@@ -11,16 +11,21 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 80px;
+    padding: 30px 80px;
     background: #013d48;
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
+    box-shadow: 0 1px 4px rgba(0, 0,0,0.7);
 }
 
 .logo {
     position: absolute;
-    width: 90px;
+    width: 95px;
     height: 80px;
     left: 43px;
-    top: -10px;
+    top: -2px;
 
 }
 
