--- a/style.css
+++ b/style.css
@@ -377,3 +377,132 @@ button:focus {
 
     text-shadow: 0px 4px 4px rgba(255, 211, 1, 0.65);
 }
+
+.faq-item1 {
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 800px;
+    height: 57.52px;
+    left: 215px;
+    top: 6361px;
+
+
+    background: linear-gradient(93.34deg, rgba(0, 95, 115, 0.17) -20.32%, rgba(37, 206, 209, 0.26) 88.13%);
+    border-radius: 45px;
+    border: solid rgba(37, 206, 209, 1);
+}
+
+.faq-item2 {
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 800px;
+    height: 57.52px;
+    left: 215px;
+    top: 6447.28px;
+
+    background: linear-gradient(93.34deg, rgba(0, 95, 115, 0.17) -20.32%, rgba(37, 206, 209, 0.26) 88.13%);
+    border-radius: 45px;
+    border: solid rgba(37, 206, 209, 1);
+}
+
+.faq-item3 {
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 800px;
+    height: 57.52px;
+    left: 215px;
+    top: 6533.56px;
+
+    background: linear-gradient(93.34deg, rgba(0, 95, 115, 0.17) -20.32%, rgba(37, 206, 209, 0.26) 88.13%);
+    border-radius: 45px;
+    border: solid rgba(37, 206, 209, 1);
+}
+
+.faq-item4 {
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 800px;
+    height: 57.52px;
+    left: 215px;
+    top: 6619.85px;
+
+    background: linear-gradient(93.34deg, rgba(0, 95, 115, 0.17) -20.32%, rgba(37, 206, 209, 0.26) 88.13%);
+    border-radius: 45px;
+    border: solid rgba(37, 206, 209, 1);
+}
+
+.faq-question1 {
+    position: absolute;
+    width: 155px;
+    height: 30px;
+    left: 60px;
+    top: 12px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+
+    color: #A7E0E1;
+}
+
+.faq-question2 {
+    position: absolute;
+    width: 470px;
+    height: 30px;
+    left: 60px;
+    top: 12px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+
+    color: #A7E0E1;
+}
+
+.faq-question3 {
+    position: absolute;
+    width: 184px;
+    height: 30px;
+    left: 60px;
+    top: 12px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+
+    color: #A7E0E1;
+}
+
+.faq-question4 {
+    position: absolute;
+    width: 180px;
+    height: 30px;
+    left: 60px;
+    top: 12px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+
+    color: #A7E0E1;
+}
