--- a/style.css
+++ b/style.css
@@ -499,6 +499,131 @@ button:focus {
     border-radius: 17px;
 }
 
+.ellipse2 {
+    position: absolute;
+    width: 400px;
+    height: 1000px;
+    left: -280px;
+    top: 3771px;
+    border-radius: 50%;
+
+    background: #FFD301;
+}
+
+.text-ell {
+    position: absolute;
+    width: 340px;
+    height: 50px;
+    left: 150px;
+    top: 400px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 75px;
+    letter-spacing: 0.5em;
+    text-transform: capitalize;
+
+    color: #005F73;
+    background: #FFD301;
+
+    transform: rotate(-90deg);
+}
+
+.case1 {
+    position: absolute;
+    width: 1150px;
+    height: 120px;
+    left: 50px;
+    top: 3900px;
+
+    background: linear-gradient(90deg, #F2F5F5 0%, rgba(217, 217, 217, 0) 100%);
+}
+
+.case2 {
+    position: absolute;
+    width: 1150px;
+    height: 120px;
+    left: 50px;
+    top: 4080px;
+
+    background: linear-gradient(90deg, #F2F5F5 0%, rgba(217, 217, 217, 0) 100%);
+}
+
+.case3 {
+    position: absolute;
+    width: 1150px;
+    height: 120px;
+    left: 50px;
+    top: 4260px;
+
+    background: linear-gradient(90deg, #F2F5F5 0%, rgba(217, 217, 217, 0) 100%);
+}
+
+.case4 {
+    position: absolute;
+    width: 1150px;
+    height: 120px;
+    left: 50px;
+    top: 4440px;
+
+    background: linear-gradient(90deg, #F2F5F5 0%, rgba(217, 217, 217, 0) 100%);
+}
+
+.date {
+
+    background: linear-gradient(90deg, #F2F5F5 0%, rgba(217, 217, 217, 0) 100%);
+    position: absolute;
+    width: 110px;
+    height: 90px;
+    left: 100px;
+    top: 15px;
+
+    text-align: center;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 45px;
+    letter-spacing: 0.1em;
+    text-transform: capitalize;
+
+    color: #000000;
+}
+
+.program {
+    position: absolute;
+
+    width: 500px;
+    height: 110px;
+    left: 250px;
+    top: 3px;
+
+    background: linear-gradient(90deg, #F2F5F5 0%, rgba(217, 217, 217, 0) 100%);
+
+
+}
+
+.program p {
+    position: absolute;
+    width: 800px;
+    height: 92px;
+    left: 10px;
+    top: 10px;
+    background: linear-gradient(90deg, #F2F5F5 0%, rgba(217, 217, 217, 0) 100%);
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 22px;
+    letter-spacing: 0.1em;
+    text-transform: capitalize;
+
+    color: #000000;
+}
+
 /* faq */
 .faq-item1 {
     box-sizing: border-box;
