--- a/style.css
+++ b/style.css
@@ -10,8 +10,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 80px;
+    padding: 30px 80px;
     background: #013d48;
+    z-index: 999;
+    position: sticky;
+    top:0;
+    left: 0;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7);
 }
 
 .logo {
@@ -19,7 +24,7 @@
     width: 90px;
     height: 80px;
     left: 43px;
-    top: -10px;
+    top: -5px;
 
 }
 
@@ -997,3 +1002,77 @@ button:focus {
 
     background: linear-gradient(90.09deg, #005F73 -22.25%, #25CED1 112.51%);
 }
+.sign-in{
+    
+    width: 1250px; 
+      left:50%;
+       margin-top: 3500px;
+      margin-bottom: 200px; 
+    height: 200px;
+      text-align: center;
+  
+    }
+    .s-btn{
+      background: linear-gradient(93.34deg, #005F73,-20.23%, #25CED1);
+      width: 15%;
+      margin-top: 170px;
+      height: 42px;
+      border:none ;
+      outline: none;
+      border-radius: 45px;
+  font-family: calibri ;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  letter-spacing: 1px;
+  font-weight: 700;
+  box-shadow: 0px 4px 4px  rgba(176,224,225,0.75); margin-bottom: 20px;
+  
+    }
+    button:active{
+      transform: scale(1.05);
+    }
+  .sign-in-page form{
+      display: flex;
+      flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+   color: white;
+  }
+  .sign-in-page {
+      width: 100%;
+      height: 45%;
+     
+  }
+  .sign-in-page input{
+      width:400px ;
+      height:40px;
+      margin:5px 0;
+      border: 2.5px solid  ;
+      border-color: #005F73;
+      border-radius: 45px;
+      padding: 10px 30px;
+      box-sizing: border-box;
+      margin-top: 10px;
+      background: linear-gradient(93.34deg, rgba(0,95,115,0.17) -20.32%,rgba(37,206,209,0.29)88.13%);
+    
+  }
+  .sign-in-page input::placeholder{
+      color: white;
+  font-family: calbri;
+  font-size: 15px;
+  }
+  .btn{
+      width: 10%;
+      height: 30px;
+      margin-left: 20%;
+     margin-top: 20px;
+     border-color:rgba(225,211,1,1) ;
+      background-color: rgba(225,211,1,1);
+      box-shadow: 12px 12px 30px rgba(178, 189, 80, 0.1);
+      border-radius: 45px;
+      color: white;
+      font-size: 16px;
+     
+  }
